# coin_bot

./: .gitignore  Makefile  pyproject.toml
dockerfiles/: coin.Dockerfile  docker-compose.yml
secrets/: coin.env.example  db.env.example
src/: migrate.py  models.py  run.py  settings.py
src/coin/: coins.py  ping.py  simple.py
src/handlers/: callbacks.py  commands.py  messages.py
src/handlers/callbacks/: coins.py  currencies.py  notifications.py  settings.py
src/utils/: cmd.py  txt.py
