[tool.poetry]
name = "coin_bot"
version = "0.1.0"
description = ""
authors = ["Aleksandr Volkov <jetvolkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.1"
environs = "^9.3.0"
python-telegram-bot = "^13.1"
schedule = "^0.6.0"
Babel = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
